<resources>
    <string name="app_name">Login Demo</string>
    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="Continue"><u>Continue as a guest</u></string>
    <string name="change">Reset</string>
</resources>
