<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                tools:context=".MainActivity">
        <ImageView
                android:id="@+id/bookIconImageView"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_150"
                android:src="@mipmap/logo_transparent"
                android:layout_centerInParent="true"
                android:contentDescription="@null"/>
    <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-4dp"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"
            android:theme="@style/ProgressBarStyle"/>

    <RelativeLayout
            android:id="@+id/afterAnimationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:orientation="vertical"
            android:visibility="gone">

        <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/colorTextView"
                android:layout_marginTop="@dimen/dimen_50"
                android:textSize="@dimen/text_25"
                android:textStyle="bold"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/loginButton"
                android:gravity="center"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/text_16"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_25"
                    android:hint="@string/password"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/text_16"/>

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:padding="5dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorTextView"
                        android:textSize="@dimen/text_14"
                        android:textStyle="bold" android:id="@+id/sign_up"/>


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="@string/forget_password"
                        android:textColor="@color/colorTextView"
                        android:textSize="@dimen/text_14"
                        android:textStyle="bold" android:id="@+id/forget_password"/>

            </FrameLayout>

        </LinearLayout>

        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/deimen_55"
                android:layout_above="@+id/skipTextView"
                android:layout_marginBottom="@dimen/dimen_5"
                android:background="@drawable/button_drawable"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18"/>

        <TextView
                android:id="@+id/skipTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/Continue"
                android:textColor="@color/colorTextView"
                android:textSize="15sp"/>


    </RelativeLayout>

</RelativeLayout>